--- a/serverVariables.ini
+++ b/serverVariables.ini
@@ -9,5 +9,5 @@ token.lifeDuration = 2000
 
 gmail.host = smtp.gmail.com
 gmail.port = 587
-gmail.accountEmail = productionsquartierlibre@gmail.com
-gmail.accountPassword = hiqdxggmvcwyfawm
+gmail.accountEmail = votrecompte@gmail.com
+gmail.accountPassword = votre mot de passe
